Rat Screw Dialogue done + Zilia Cloth Sim
Select on who is active player, which selects disadvantage or advantage lines on unique card played. Also winning and losing dialogue done on a select

Zilia cloth sim on dress works, degen triangle on the hair so cant simulate that.

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -622,7 +622,7 @@ Check if Played All Games=PropertyWrapper.DefaultValueCategory.All Cards,Propert
 Check if Played All Games_13=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Medium Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.MediumCardValues,PropertyWrapper.DefaultValueCategory.Player -> Round Score,PropertyWrapper.DefaultValueCategory.Player Scores,PropertyWrapper.DefaultValueCategory.test,PropertyWrapper.DefaultValueCategory.Won Card -> Player,PropertyWrapper.DefaultValueCategory.Unique Card Triggers,PropertyWrapper.DefaultValueCategory.Unique Cards That Should Be Displayed,PropertyWrapper.DefaultValueCategory.HighCardValues,PropertyWrapper.DefaultValueCategory.LowCardValues,PropertyWrapper.DefaultValueCategory.Songs,PropertyWrapper.DefaultValueCategory.Button Index -> Hovered Moving,PropertyWrapper.DefaultValueCategory.Button -> Hovered,PropertyWrapper.DefaultValueCategory.Volume Levels,PropertyWrapper.DefaultValueCategory.Temp Characters,PostProcessVolume.Lens.Lens,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_CardPile_C.TransformCommon.Transform,Blueprint.Interfaces.Implemented Interfaces,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CameraComponent.PostProcess.Lens,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableGet.DefaultValueCategory.Card Info,K2Node_VariableGet.DefaultValueCategory.Player Scores,K2Node_VariableGet.DefaultValueCategory.Playing Characters -> Can Play Round,K2Node_VariableGet.DefaultValueCategory.Game -> Difficulty,K2Node_VariableGet.DefaultValueCategory.Unique Card Triggers,K2Node_VariableGet.DefaultValueCategory.UniqueCardChance,K2Node_VariableGet.DefaultValueCategory.HighCardValues,K2Node_VariableGet.DefaultValueCategory.LowCardValues,K2Node_VariableGet.DefaultValueCategory.MediumCardValues,K2Node_VariableGet.DefaultValueCategory.Volume Levels,K2Node_VariableGet.DefaultValueCategory.Temp Characters,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Game -> Difficulty,K2Node_FunctionEntry.Inputs.D34C10B84E9452DF65D6F78581B8C5E0,StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,SphereComponent.Collision.Collision,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,TargetPoint.TransformCommon.Transform,TargetPoint.Physics.ConstraintsGroup,TargetPoint.Collision.Collision,WidgetComponent.Collision.Collision,WidgetComponent.Physics.ConstraintsGroup,WidgetComponent.Materials.MaterialList
 WBP_Game_Completed_C=
 SkeletalMesh=SkeletalMesh.ImportSettings.Mesh,SkeletalMesh.LOD0.MeshBuildSettings
-LODInfoUILayout=
+LODInfoUILayout=SkeletalMesh.ImportSettings.Mesh,SkeletalMesh.LOD0.MeshBuildSettings
 SkeletalMeshActor=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Games -> Completed,PropertyWrapper.DefaultValueCategory.Games -> Won?,PropertyWrapper.DefaultValueCategory.Face Card Triggers,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Medium Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.MediumCardValues,PropertyWrapper.DefaultValueCategory.Mini Games -> Completed,PropertyWrapper.DefaultValueCategory.Mini Games -> Won?,PropertyWrapper.DefaultValueCategory.Player -> Round Score,PropertyWrapper.DefaultValueCategory.Player Scores,PropertyWrapper.DefaultValueCategory.Possible Image Int,PropertyWrapper.DefaultValueCategory.Pool -> Difficulty Won,PropertyWrapper.DefaultValueCategory.test,PropertyWrapper.DefaultValueCategory.Won Card -> Player,PropertyWrapper.DefaultValueCategory.Unique Card Triggers,PropertyWrapper.DefaultValueCategory.Unique Cards That Should Be Displayed,PropertyWrapper.DefaultValueCategory.Unique Cards That Shouldnt Be Displayed,PropertyWrapper.DefaultValueCategory.HighCardValues,PropertyWrapper.DefaultValueCategory.LowCardValues,PropertyWrapper.DefaultValueCategory.Songs,PropertyWrapper.DefaultValueCategory.Button Index -> Hovered Moving,PropertyWrapper.DefaultValueCategory.Button -> Hovered,PropertyWrapper.DefaultValueCategory.Volume Levels,PropertyWrapper.DefaultValueCategory.Temp Characters,PropertyWrapper.DefaultValueCategory.Darts -> Difficulty Won,PostProcessVolume.Lens.Lens,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_CardPile_C.TransformCommon.Transform,Blueprint.Interfaces.Implemented Interfaces,BlockingVolume.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CameraComponent.PostProcess.Lens,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableGet.DefaultValueCategory.Card Info,K2Node_VariableGet.DefaultValueCategory.Player Scores,K2Node_VariableGet.DefaultValueCategory.Playing Characters -> Can Play Round,K2Node_VariableGet.DefaultValueCategory.Possible Image Int,K2Node_VariableGet.DefaultValueCategory.Game -> Difficulty,K2Node_VariableGet.DefaultValueCategory.Games -> Completed,K2Node_VariableGet.DefaultValueCategory.Unique Card Triggers,K2Node_VariableGet.DefaultValueCategory.UniqueCardChance,K2Node_VariableGet.DefaultValueCategory.HighCardValues,K2Node_VariableGet.DefaultValueCategory.LowCardValues,K2Node_VariableGet.DefaultValueCategory.MediumCardValues,K2Node_VariableGet.DefaultValueCategory.Volume Levels,K2Node_VariableGet.DefaultValueCategory.Temp Characters,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Game -> Difficulty,K2Node_FunctionEntry.Inputs.D34C10B84E9452DF65D6F78581B8C5E0,StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,SphereComponent.Collision.Collision,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshActor.Physics.ConstraintsGroup,TargetPoint.TransformCommon.Transform,TargetPoint.Physics.ConstraintsGroup,TargetPoint.Collision.Collision,WidgetComponent.Collision.Collision,WidgetComponent.Physics.ConstraintsGroup,WidgetComponent.Materials.MaterialList
 ControlRigWrapperObject_FRigBoneElement=ControlRigWrapperObject_FRigBoneElement.Transform.Current
 ControlRigWrapperObject_FRigControlElement=ControlRigWrapperObject_FRigControlElement.Transform.Current,ControlRigWrapperObject_FRigControlElement.Shape.Shape Transform
@@ -1922,7 +1922,7 @@ ClothingSystemEditorInterface.LastCompileMethod=Unknown
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
-Object="\"Object\" \"Object.SkeletalMeshes\" "
+Object="\"Object\" "
 None=======
 None=======
 None=======
@@ -2197,7 +2197,7 @@ UserWidget="\"Object\" "
 Widget="\"Object\" "
 Visual="\"Object\" "
 StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" "
-StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" "
+StreamableRenderAsset="\"Object\" "
 AssetViewerSettings="\"Object\" "
 TargetPoint="\"Object\" \"Object.Actor.Tags\" "
 MaterialExpressionSceneTexture="\"Object\" "
@@ -2470,6 +2470,7 @@ BP_Calculate_Random_State_Int_C="\"Object\" "
 BP_Accessory_Equip_C="\"Object\" "
 BP_Accessory_Dequip_C="\"Object\" "
 SkeletalMeshSocket="\"Object\" "
+ClothPaintTool_SmoothSettings="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -2496,6 +2497,8 @@ None=======
 None=======
 None=======
 None=======
+RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationEditor
@@ -2515,7 +2518,6 @@ RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=AnimationEditor
 RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
@@ -2525,59 +2527,40 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=AnimationEditor
-OpenAssetsAtExit=/Game/NPCs/BP_NPC.BP_NPC
-OpenAssetsAtExit=/Game/NPCs/Dialogue_Specific/DT_Dialogue.DT_Dialogue
-OpenAssetsAtExit=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Difficulty_Selection.WBP_Darts_Difficulty_Selection
-OpenAssetsAtExit=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Mode_Selection.WBP_Darts_Mode_Selection
-OpenAssetsAtExit=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC.ABP_NPC
-OpenAssetsAtExit=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager.BP_Auction_Game_Manager
-OpenAssetsAtExit=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager.BP_I_Doubt_It_Game_Manager
-OpenAssetsAtExit=/Game/UI/Diegetic/Misc/Drink_Menu/WBP_Drink_Names.WBP_Drink_Names
-OpenAssetsAtExit=/Game/Mini_Games/Darts/BP_Dart_Game_Manager.BP_Dart_Game_Manager
-OpenAssetsAtExit=/Game/NPCs/BPI_NPC_Opponent.BPI_NPC_Opponent
-OpenAssetsAtExit=/Game/UI/Non_Diegetic/Pause/WBP_Pause_Menu1.WBP_Pause_Menu1
-OpenAssetsAtExit=/Game/Modes_Instances/Modes/GM_Bar.GM_Bar
-OpenAssetsAtExit=/Game/UI/Diegetic/Menus/BP_Main_Menu.BP_Main_Menu
-OpenAssetsAtExit=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Scoreboard.WBP_Darts_Scoreboard
-OpenAssetsAtExit=/Game/UI/Diegetic/NPCs/WBP_NPC_Game_Availability_Indicator.WBP_NPC_Game_Availability_Indicator
-OpenAssetsAtExit=/Game/NPCs/Animations/BP_Calculate_Random_State_Int.BP_Calculate_Random_State_Int
-OpenAssetsAtExit=/Game/NPCs/Animations/Assets/Dante/Dante_wiping_the_counter.Dante_wiping_the_counter
-OpenAssetsAtExit=/Game/NPCs/Animations/BP_Accessory_Equip.BP_Accessory_Equip
-OpenAssetsAtExit=/Game/NPCs/Animations/BP_Accessory_Dequip.BP_Accessory_Dequip
-OpenAssetsAtExit=/Game/NPCs/Models/Dante_v2/Dante_V2_Skeleton.Dante_V2_Skeleton
+OpenAssetsAtExit=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager.BP_Rat_Screw_Game_Manager
+OpenAssetsAtExit=/Game/NPCs/Models/Zilia/United_Model/Zilia_united.Zilia_united
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/NPCs/Models/Dante_v2/Dante_V2_Skeleton
-MRUItem1=/Game/NPCs/Animations/BP_Accessory_Dequip
-MRUItem2=/Game/NPCs/Animations/BP_Accessory_Equip
-MRUItem3=/Game/NPCs/Animations/Assets/Dante/Dante_wiping_the_counter
-MRUItem4=/Game/NPCs/Animations/BP_Calculate_Random_State_Int
-MRUItem5=/Game/UI/Diegetic/NPCs/WBP_NPC_Game_Availability_Indicator
-MRUItem6=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Scoreboard
-MRUItem7=/Game/UI/Diegetic/Menus/BP_Main_Menu
-MRUItem8=/Game/Modes_Instances/Modes/GM_Bar
-MRUItem9=/Game/UI/Non_Diegetic/Pause/WBP_Pause_Menu1
-MRUItem10=/Game/NPCs/BPI_NPC_Opponent
-MRUItem11=/Game/Mini_Games/Darts/BP_Dart_Game_Manager
-MRUItem12=/Game/UI/Diegetic/Misc/Drink_Menu/WBP_Drink_Names
-MRUItem13=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
-MRUItem14=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
-MRUItem15=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
-MRUItem16=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Mode_Selection
-MRUItem17=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Difficulty_Selection
-MRUItem18=/Game/NPCs/Dialogue_Specific/DT_Dialogue
-MRUItem19=/Game/NPCs/BP_NPC
-MRUItem20=/Game/NPCs/Animations/Assets/Dante/Dante_smoking
-MRUItem21=/Game/NPCs/Animations/Assets/Dante/Dante_hands_on_waist
-MRUItem22=/Game/NPCs/Animations/Assets/Dante/Dante_base_pose
-MRUItem23=/Game/NPCs/Animations/Assets/Dante/Dante_arms_crossed
-MRUItem24=/Game/NPCs/Enums/Enum_NPC_Anim_Accessories
-MRUItem25=/Game/NPCs/Animations/BP_Action
-MRUItem26=/Game/NPCs/Models/Dante_V3/Dante_cigar
-MRUItem27=/Game/Maps/Main_Level/Main_Level
-MRUItem28=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem29=/Game/Maps/Test_Level/ThirdPersonMap
+MRUItem0=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
+MRUItem1=/Game/NPCs/Models/Zilia/United_Model/Zilia_united
+MRUItem2=/Game/NPCs/Models/Dante_v2/Dante_V2_Skeleton
+MRUItem3=/Game/NPCs/Animations/BP_Accessory_Dequip
+MRUItem4=/Game/NPCs/Animations/BP_Accessory_Equip
+MRUItem5=/Game/NPCs/Animations/Assets/Dante/Dante_wiping_the_counter
+MRUItem6=/Game/NPCs/Animations/BP_Calculate_Random_State_Int
+MRUItem7=/Game/UI/Diegetic/NPCs/WBP_NPC_Game_Availability_Indicator
+MRUItem8=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Scoreboard
+MRUItem9=/Game/UI/Diegetic/Menus/BP_Main_Menu
+MRUItem10=/Game/Modes_Instances/Modes/GM_Bar
+MRUItem11=/Game/UI/Non_Diegetic/Pause/WBP_Pause_Menu1
+MRUItem12=/Game/NPCs/BPI_NPC_Opponent
+MRUItem13=/Game/Mini_Games/Darts/BP_Dart_Game_Manager
+MRUItem14=/Game/UI/Diegetic/Misc/Drink_Menu/WBP_Drink_Names
+MRUItem15=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem16=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
+MRUItem17=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
+MRUItem18=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Mode_Selection
+MRUItem19=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Difficulty_Selection
+MRUItem20=/Game/NPCs/Dialogue_Specific/DT_Dialogue
+MRUItem21=/Game/NPCs/BP_NPC
+MRUItem22=/Game/NPCs/Animations/Assets/Dante/Dante_smoking
+MRUItem23=/Game/NPCs/Animations/Assets/Dante/Dante_hands_on_waist
+MRUItem24=/Game/NPCs/Animations/Assets/Dante/Dante_base_pose
+MRUItem25=/Game/NPCs/Animations/Assets/Dante/Dante_arms_crossed
+MRUItem26=/Game/NPCs/Enums/Enum_NPC_Anim_Accessories
+MRUItem27=/Game/NPCs/Animations/BP_Action
+MRUItem28=/Game/NPCs/Models/Dante_V3/Dante_cigar
+MRUItem29=/Game/Maps/Main_Level/Main_Level
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -5834,6 +5817,8 @@ BP_Accessory_Equip_C.AnimNotify=True
 BP_Accessory_Dequip_C.Default=True
 BP_Accessory_Dequip_C.AnimNotify=True
 SkeletalMeshSocket.Socket Parameters=True
+ClothPaintTool_SmoothSettings.ToolSettings=True
+SkeletalMeshClothBuildParams.Target=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
@@ -6334,6 +6319,10 @@ None=======
 /Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_60_to_Zilia.Dante_60_to_Zilia=1
 /Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_63_to_player_and_Zilia.Dante_63_to_player_and_Zilia=1
 /Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_66_to_Zilia.Dante_66_to_Zilia=1
+/Game/NPCs/Animations/BP_Calculate_Random_State_Int.BP_Calculate_Random_State_Int=1
+/Game/NPCs/Animations/Assets/Dante/Dante_wiping_the_counter.Dante_wiping_the_counter=1
+/Game/NPCs/Animations/BP_Accessory_Equip.BP_Accessory_Equip=1
+/Game/NPCs/Animations/BP_Accessory_Dequip.BP_Accessory_Dequip=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -6772,6 +6761,7 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [PlacementMode]
+RecentlyPlaced=/Game/NPCs/Models/Zilia/United_Model/Zilia_united.Zilia_united;
 RecentlyPlaced=/Game/NPCs/Models/Biel/Biel.Biel;
 RecentlyPlaced=/Game/NPCs/Animations/Assets/Dante/Dante_2_to_Biel.Dante_2_to_Biel;
 RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_8
@@ -6791,7 +6781,6 @@ RecentlyPlaced=/Game/Environment/jess_props/POKER/Poker_Chip_8.Poker_Chip_8;
 RecentlyPlaced=/Game/Environment/jess_props/POKER/Poker_Chip_7.Poker_Chip_7;
 RecentlyPlaced=/Game/Environment/jess_props/Stack_Poker_20.Stack_Poker_20;
 RecentlyPlaced=/Game/Environment/jess_props/POKER/Poker_Chip_4.Poker_Chip_4;
-RecentlyPlaced=/Game/Environment/jess_props/Stack_Poker_1.Stack_Poker_1;
 None=======
 
 [SuppressableDialogs]
@@ -7241,4 +7230,8 @@ Texture2D=
 Texture=
 StreamableRenderAsset=
 Object=
+
+[MeshPaintEdit]
+DefaultBrushRadius=6
+DefaultBrushStrength=0.300000012
 
