--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -125,7 +125,7 @@ AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
 LastSize=(X=0,Y=0)
-LastSize=(X=1914,Y=1050)
+LastSize=(X=1914,Y=992)
 None=======
 None=======
 LastExecutedLaunchDevice=Windows@WINDOWS-LKPMU37
@@ -135,7 +135,7 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 NewWindowWidth=1914
 NewWindowHeight=1040
-NewWindowHeight=1050
+NewWindowHeight=992
 MultipleInstancePositions=(X=0,Y=0)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
@@ -188,7 +188,7 @@ MRUItem6=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
-WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
+WorldPartitionRuntimeSpatialHash=
 GeneralProjectSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Move Forward / Backward,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice
 CryptoKeysSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Move Forward / Backward,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice
 GameplayTagsSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Move Forward / Backward,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice
@@ -704,7 +704,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Main_Game_Managers/Rat_Screw
 ContentBrowserTab1.SelectedPaths=/Game/Environment/Street_Assets/Textures/graffiti
 ContentBrowserTab1.SelectedPaths=/Game/Maps/Main_Level
 ContentBrowserTab1.SelectedPaths=/Game/NPCs/Models/Dante_v2/Textures
-ContentBrowserTab1.SelectedPaths=/Game/NPCs/Animations/Assets/Dante/Dialogue
+ContentBrowserTab1.SelectedPaths=/Game/Player
 None=======
 None=======
 None=======
@@ -830,7 +830,7 @@ ContentBrowserTab3.ThumbnailSize=2
 ContentBrowserTab3.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Maps/Main_Level/Main_Level
+LastLevel=/Game/Maps/Test_Level/ThirdPersonMap
 
 [ModuleFileTracking]
 Project_7_Sins.TimeStamp=2025.03.22-16.28.40
@@ -1924,7 +1924,7 @@ ClothingSystemEditorInterface.LastCompileMethod=Unknown
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
-Object=
+Object="\"Object\" "
 None=======
 None=======
 None=======
@@ -1942,11 +1942,11 @@ None=======
 None=======
 None=======
 SpringArmComponent="\"Object\" "
-SceneComponent=
-ActorComponent=
+SceneComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 CameraComponent="\"Object\" "
-SkeletalMeshComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-SkinnedMeshComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+SkeletalMeshComponent="\"Object\" "
+SkinnedMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
 MeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object\" "
@@ -2195,9 +2195,9 @@ SplineComponent="\"Object\" "
 BP_Rat_Screw_Game_Manager_C="\"Object\" "
 MegascansMaterialParentSettings="\"Object\" "
 W_Winner_C="\"Object\" "
-UserWidget="\"Object\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
+UserWidget="\"Object\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object\" \"Object.Render Transform.RenderTransform\" "
 StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" "
 StreamableRenderAsset="\"Object\" "
 AssetViewerSettings="\"Object\" "
@@ -2221,7 +2221,7 @@ WidgetComponent="\"Object\" "
 WidgetComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 SizeBox="\"Object\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.ImageSize\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.ImageSize\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Render Transform.RenderTransform\" "
 WBP_FaceCardPlayed_C="\"Object\" "
@@ -2476,7 +2476,7 @@ ClothPaintTool_SmoothSettings="\"Object\" "
 WBP_Card_Display_C="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 None=======
 None=======
@@ -2501,9 +2501,13 @@ None=======
 None=======
 None=======
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=AnimationEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=BlueprintEditor
@@ -2519,52 +2523,49 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/UI/Non_Diegetic/Rules/WBP_Rat_Screw_Rules.WBP_Rat_Screw_Rules
+OpenAssetsAtExit=/Game/UI/Diegetic/WBP_Game_Win_Loss.WBP_Game_Win_Loss
+OpenAssetsAtExit=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager.BP_I_Doubt_It_Game_Manager
+OpenAssetsAtExit=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager.BP_Auction_Game_Manager
 OpenAssetsAtExit=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager.BP_Rat_Screw_Game_Manager
-OpenAssetsAtExit=/Game/UI/Diegetic/Main_Games/WBP_Card_Display.WBP_Card_Display
+OpenAssetsAtExit=/Game/NPCs/Animations/BP_Dialogue_Link.BP_Dialogue_Link
+OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UI/Non_Diegetic/Rules/WBP_Rat_Screw_Rules
-MRUItem1=/Game/Maps/Main_Level/Main_Level
-MRUItem2=/Game/UI/Diegetic/Main_Games/WBP_Card_Display
-MRUItem3=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem4=/Game/Maps/Test_Level/ThirdPersonMap
-MRUItem5=/Game/NPCs/Models/Zilia/United_Model/Zilia_united
-MRUItem6=/Game/NPCs/Models/Dante_v2/Dante_V2_Skeleton
-MRUItem7=/Game/NPCs/Animations/BP_Accessory_Dequip
-MRUItem8=/Game/NPCs/Animations/BP_Accessory_Equip
-MRUItem9=/Game/NPCs/Animations/Assets/Dante/Dante_wiping_the_counter
-MRUItem10=/Game/NPCs/Animations/BP_Calculate_Random_State_Int
-MRUItem11=/Game/UI/Diegetic/NPCs/WBP_NPC_Game_Availability_Indicator
-MRUItem12=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Scoreboard
-MRUItem13=/Game/UI/Diegetic/Menus/BP_Main_Menu
-MRUItem14=/Game/Modes_Instances/Modes/GM_Bar
-MRUItem15=/Game/UI/Non_Diegetic/Pause/WBP_Pause_Menu1
-MRUItem16=/Game/NPCs/BPI_NPC_Opponent
-MRUItem17=/Game/Mini_Games/Darts/BP_Dart_Game_Manager
-MRUItem18=/Game/UI/Diegetic/Misc/Drink_Menu/WBP_Drink_Names
-MRUItem19=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
-MRUItem20=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
-MRUItem21=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
-MRUItem22=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Mode_Selection
-MRUItem23=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Difficulty_Selection
-MRUItem24=/Game/NPCs/Dialogue_Specific/DT_Dialogue
-MRUItem25=/Game/NPCs/BP_NPC
-MRUItem26=/Game/NPCs/Animations/Assets/Dante/Dante_smoking
-MRUItem27=/Game/NPCs/Animations/Assets/Dante/Dante_hands_on_waist
-MRUItem28=/Game/NPCs/Animations/Assets/Dante/Dante_base_pose
-MRUItem29=/Game/NPCs/Animations/Assets/Dante/Dante_arms_crossed
+MRUItem0=/Game/NPCs/Animations/BP_Dialogue_Link
+MRUItem1=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
+MRUItem2=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
+MRUItem3=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem4=/Game/UI/Diegetic/WBP_Game_Win_Loss
+MRUItem5=/Game/UI/Non_Diegetic/Rules/WBP_Rat_Screw_Rules
+MRUItem6=/Game/Maps/Main_Level/Main_Level
+MRUItem7=/Game/UI/Diegetic/Main_Games/WBP_Card_Display
+MRUItem8=/Game/Maps/Test_Level/ThirdPersonMap
+MRUItem9=/Game/NPCs/Models/Zilia/United_Model/Zilia_united
+MRUItem10=/Game/NPCs/Models/Dante_v2/Dante_V2_Skeleton
+MRUItem11=/Game/NPCs/Animations/BP_Accessory_Dequip
+MRUItem12=/Game/NPCs/Animations/BP_Accessory_Equip
+MRUItem13=/Game/NPCs/Animations/Assets/Dante/Dante_wiping_the_counter
+MRUItem14=/Game/NPCs/Animations/BP_Calculate_Random_State_Int
+MRUItem15=/Game/UI/Diegetic/NPCs/WBP_NPC_Game_Availability_Indicator
+MRUItem16=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Scoreboard
+MRUItem17=/Game/UI/Diegetic/Menus/BP_Main_Menu
+MRUItem18=/Game/Modes_Instances/Modes/GM_Bar
+MRUItem19=/Game/UI/Non_Diegetic/Pause/WBP_Pause_Menu1
+MRUItem20=/Game/NPCs/BPI_NPC_Opponent
+MRUItem21=/Game/Mini_Games/Darts/BP_Dart_Game_Manager
+MRUItem22=/Game/UI/Diegetic/Misc/Drink_Menu/WBP_Drink_Names
+MRUItem23=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
+MRUItem24=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Mode_Selection
+MRUItem25=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Difficulty_Selection
+MRUItem26=/Game/NPCs/Dialogue_Specific/DT_Dialogue
+MRUItem27=/Game/NPCs/BP_NPC
+MRUItem28=/Game/NPCs/Animations/Assets/Dante/Dante_smoking
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -5835,6 +5836,19 @@ WBP_Card_Display_C.Localization=True
 WBP_Card_Display_C.Accessibility=True
 WBP_Card_Display_C.Rendering=True
 WBP_Card_Display_C.Navigation=True
+BP_Dialogue_Link_C.Default=True
+WBP_Game_Win_Loss_C.Appearance=True
+WBP_Game_Win_Loss_C.Input=True
+WBP_Game_Win_Loss_C.Interaction=True
+WBP_Game_Win_Loss_C.Designer=True
+WBP_Game_Win_Loss_C.Performance=True
+WBP_Game_Win_Loss_C.Layout=True
+WBP_Game_Win_Loss_C.Behavior=True
+WBP_Game_Win_Loss_C.Render Transform=True
+WBP_Game_Win_Loss_C.Localization=True
+WBP_Game_Win_Loss_C.Accessibility=True
+WBP_Game_Win_Loss_C.Rendering=True
+WBP_Game_Win_Loss_C.Navigation=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
@@ -6166,7 +6180,7 @@ None=======
 /Game/Characters/Mannequins/Animations/Manny/MM_Fall_Loop.MM_Fall_Loop=1
 /Game/NPCs/Animations/BP_DialogueNotify.BP_DialogueNotify=1
 /Game/UI/Diegetic/Main_Games/IDI_Specific/WBP_Unique_Card_Action.WBP_Unique_Card_Action=1
-/Game/UI/Diegetic/WBP_Game_Win_Loss.WBP_Game_Win_Loss=1
+/Game/UI/Diegetic/WBP_Game_Win_Loss.WBP_Game_Win_Loss=0
 /Game/UI/Button_Prompt_Assets/Done/A_RED_BUTTON_PROMPT.A_RED_BUTTON_PROMPT=1
 /Game/UI/Button_Prompt_Assets/Done/CAPS_ORANGE_BUTTON_PROMPT.CAPS_ORANGE_BUTTON_PROMPT=1
 /Game/UI/Button_Prompt_Assets/Done/CAPS_RED_BUTTON_PROMPT.CAPS_RED_BUTTON_PROMPT=1
@@ -6303,7 +6317,7 @@ None=======
 /Game/SFX/Dialogue/Zilia/NPC_Dialogues/Zilia___Biel/Zilia_6_to_Biel_Cue.Zilia_6_to_Biel_Cue=1
 /Game/SFX/Dialogue/Zilia/Game_invitation/I_doubt_it/Zilia_9_to_Dante_Cue.Zilia_9_to_Dante_Cue=1
 /Game/NPCs/Animations/BP_Dialogue_Start.BP_Dialogue_Start=1
-/Game/NPCs/Animations/BP_Dialogue_Link.BP_Dialogue_Link=1
+/Game/NPCs/Animations/BP_Dialogue_Link.BP_Dialogue_Link=0
 /Game/SFX/Dialogue/Dante/Game_invitation/Dante_63_to_player_and_Zilia.Dante_63_to_player_and_Zilia=1
 /Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_112.Dante_112=1
 /Game/NPCs/Enums/Enum_NPC_Names.Enum_NPC_Names=1
