--- a/Project_7_Sins/Saved/Config/ConsoleHistory.ini
+++ b/Project_7_Sins/Saved/Config/ConsoleHistory.ini
@@ -7,5 +7,6 @@ History=r.Streaming.PoolSize 4000
 History=r.Streaming.PoolSize4000
 History=r.Streaming.PoolSize
 History=r.Streaming.PoolSize 8000
+History=" r.Streaming.PoolSize 6000"
 History=r.Streaming.PoolSize 6000
 
