Options Menu Colour Change Margins
I changed colours fof the options menu. Also messed w margins a bit shouldnt have altereed anything else with it though

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -832,7 +832,7 @@ ContentBrowserTab3.ThumbnailSize=2
 ContentBrowserTab3.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Maps/Main_Level/Main_Level
+LastLevel=/Game/Maps/Test_Level/ThirdPersonMap
 
 [ModuleFileTracking]
 Project_7_Sins.TimeStamp=2025.03.22-16.28.40
@@ -1926,7 +1926,7 @@ ClothingSystemEditorInterface.LastCompileMethod=Unknown
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Render Transform.RenderTransform\" "
 None=======
 None=======
 None=======
@@ -2198,8 +2198,8 @@ BP_Rat_Screw_Game_Manager_C="\"Object\" "
 MegascansMaterialParentSettings="\"Object\" "
 W_Winner_C="\"Object\" "
 UserWidget="\"Object\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
+Widget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Render Transform.RenderTransform\" "
 StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" "
 StreamableRenderAsset="\"Object\" "
 AssetViewerSettings="\"Object\" "
@@ -2222,8 +2222,8 @@ IDI Decide_3="\"Struct\" "
 WidgetComponent="\"Object\" "
 WidgetComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 SizeBox="\"Object\" \"Object.Render Transform.RenderTransform\" "
-ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.ImageSize\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.ImageSize\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object\" \"Object.Appearance.Background\" \"Object.Appearance.Background.ImageSize\" \"Object.Appearance.Background.Margin\" \"Object.Appearance.Background.OutlineSettings\" \"Object.Appearance.Background.OutlineSettings.Color\" \"Object.Appearance.BrushColor\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object\" \"Object.Appearance.Background\" \"Object.Appearance.Background.ImageSize\" \"Object.Appearance.Background.Margin\" \"Object.Appearance.Background.OutlineSettings\" \"Object.Appearance.Background.OutlineSettings.Color\" \"Object.Appearance.BrushColor\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Render Transform.RenderTransform\" "
 WBP_FaceCardPlayed_C="\"Object\" "
@@ -2251,7 +2251,7 @@ BP_Auction_Game_Manager_C="\"Object\" "
 WBP_UnSelect_Card_C="\"Object\" \"Object.Render Transform.RenderTransform\" "
 Deal Shared Cards=
 Deal Shared Cards_8="\"Struct\" "
-Border="\"Object\" \"Object.Appearance.Background\" \"Object.Appearance.Background.ImageSize\" \"Object.Appearance.Background.Margin\" \"Object.Appearance.Background.OutlineSettings\" \"Object.Appearance.BrushColor\" \"Object.Render Transform.RenderTransform\" "
+Border="\"Object\" \"Object.Appearance.Background\" \"Object.Appearance.Background.ImageSize\" \"Object.Appearance.Background.Margin\" \"Object.Appearance.Background.OutlineSettings\" \"Object.Appearance.Background.OutlineSettings.Color\" \"Object.Appearance.BrushColor\" \"Object.Render Transform.RenderTransform\" "
 Texture2D="\"Object\" "
 Texture="\"Object\" "
 MultiLineEditableTextBox="\"Object\" "
@@ -2282,7 +2282,7 @@ WBP_Main_Menu_C="\"Object\" "
 WBP_Options_C="\"Object\" \"Object.Render Transform.RenderTransform\" "
 WBP_Darts_Start_Game_C="\"Object\" \"Object.Render Transform.RenderTransform\" "
 ProgressBar="\"Object\" \"Object.Render Transform.RenderTransform\" "
-Slider="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.NormalBarImage\" \"Object.Style.WidgetStyle.NormalBarImage.ImageSize\" \"Object.Style.WidgetStyle.NormalBarImage.OutlineSettings\" \"Object.Style.WidgetStyle.NormalThumbImage\" \"Object.Style.WidgetStyle.NormalThumbImage.ImageSize\" \"Object.Style.WidgetStyle.NormalThumbImage.OutlineSettings\" \"Object.Style.WidgetStyle.HoveredBarImage\" \"Object.Style.WidgetStyle.HoveredBarImage.OutlineSettings\" \"Object.Style.WidgetStyle.HoveredThumbImage\" \"Object.Style.WidgetStyle.HoveredThumbImage.ImageSize\" \"Object.Style.WidgetStyle.HoveredThumbImage.OutlineSettings\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+Slider="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.NormalBarImage\" \"Object.Style.WidgetStyle.NormalBarImage.ImageSize\" \"Object.Style.WidgetStyle.NormalBarImage.OutlineSettings\" \"Object.Style.WidgetStyle.NormalThumbImage\" \"Object.Style.WidgetStyle.NormalThumbImage.ImageSize\" \"Object.Style.WidgetStyle.NormalThumbImage.OutlineSettings\" \"Object.Style.WidgetStyle.HoveredBarImage\" \"Object.Style.WidgetStyle.HoveredBarImage.OutlineSettings\" \"Object.Style.WidgetStyle.HoveredThumbImage\" \"Object.Style.WidgetStyle.HoveredThumbImage.ImageSize\" \"Object.Style.WidgetStyle.HoveredThumbImage.OutlineSettings\" \"Object.Render Transform.RenderTransform\" "
 WBP_Darts_Aim_Bar_C="\"Object\" "
 ProjectileMovementComponent="\"Object\" "
 ChildActorComponent="\"Object\" \"Object.ChildActorComponent.ChildActorTemplate\" "
@@ -2506,8 +2506,9 @@ None=======
 None=======
 None=======
 None=======
+None=======
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
-<<<<<<< Updated upstream
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -2515,8 +2516,6 @@ RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=DataTableEditor
-=======
->>>>>>> Stashed changes
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=SkeletalMeshEditor
@@ -2538,82 +2537,38 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
-RecentAssetEditors=BlueprintEditor
-<<<<<<< Updated upstream
-OpenAssetsAtExit=/Game/NPCs/BP_NPC.BP_NPC
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card.BP_Card
-OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/Card_Piles/BP_Card_Holo_Indicator.BP_Card_Holo_Indicator
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Shared_Game_Mechanics/Cards/Card_Piles/BP_Card_Holo_Indicator
-MRUItem1=/Game/Player/BP_Player
-MRUItem2=/Game/NPCs/BP_NPC
-MRUItem3=/Game/Shared_Game_Mechanics/Cards/BP_Card
-MRUItem4=/Game/Maps/Main_Level/Main_Level
-MRUItem5=/Game/NPCs/Animations/Assets/Dante/Dante_darts_throw
-MRUItem6=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
-MRUItem7=/Game/Shared_Game_Mechanics/BPC_CurrentHand
-MRUItem8=/Game/Shared_Game_Mechanics/Cards/Structs_DT/DT_Cards
-MRUItem9=/Game/NPCs/Models/Dante_V3/Materials/MM_Dante_Clothes
-MRUItem10=/Game/NPCs/Models/Dante_V3/Materials/MI_Dante_Skin
-MRUItem11=/Game/NPCs/Models/Dante_V3/Dante_V3
-MRUItem12=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_60_to_Zilia
-MRUItem13=/Game/Environment/Custom_Props/Textures/T_Prop_01_A2
-MRUItem14=/Game/Environment/Custom_Props/Materials/Plants
-MRUItem15=/Game/Environment/Custom_Props/Textures/T_Prop_01_A
-MRUItem16=/Game/Modes_Instances/Modes/GM_Bar
-MRUItem17=/Game/UI/Non_Diegetic/Pause/WBP_Pause_Menu1
-MRUItem18=/Game/Misc_Mechanics/Jukebox/BP_Jukebox
-MRUItem19=/Game/UI/Diegetic/Main_Games/IDI_Specific/WBP_Player_Cards_Round_IDI
-MRUItem20=/Game/UI/Diegetic/Main_Games/IDI_Specific/WBP_Unique_Card_Action
-MRUItem21=/Game/NPCs/Dialogue_Specific/DT_Dialogue
-MRUItem22=/Game/Mini_Games/Darts/BP_Dart_Game_Manager
-MRUItem23=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem24=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
-MRUItem25=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
-MRUItem26=/Game/UI/Diegetic/Misc/Drink_Menu/WBP_Drink_Names
-MRUItem27=/Game/Misc_Mechanics/Drink_Board/BP_Drink_Board
-MRUItem28=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat
-MRUItem29=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/rag
-=======
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-
-[AssetEditorSubsystemRecents]
-MRUItem0=/Game/Shared_Game_Mechanics/Cards/BP_Card
-MRUItem1=/Game/NPCs/Models/Dante_V3/Materials/MM_Dante_Clothes
-MRUItem2=/Game/NPCs/Models/Dante_V3/Materials/MI_Dante_Skin
-MRUItem3=/Game/NPCs/Models/Dante_V3/Dante_V3
-MRUItem4=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_60_to_Zilia
-MRUItem5=/Game/Environment/Custom_Props/Textures/T_Prop_01_A2
-MRUItem6=/Game/Environment/Custom_Props/Materials/Plants
-MRUItem7=/Game/Environment/Custom_Props/Textures/T_Prop_01_A
-MRUItem8=/Game/Modes_Instances/Modes/GM_Bar
-MRUItem9=/Game/UI/Non_Diegetic/Pause/WBP_Pause_Menu1
-MRUItem10=/Game/Misc_Mechanics/Jukebox/BP_Jukebox
-MRUItem11=/Game/UI/Diegetic/Main_Games/IDI_Specific/WBP_Player_Cards_Round_IDI
-MRUItem12=/Game/UI/Diegetic/Main_Games/IDI_Specific/WBP_Unique_Card_Action
-MRUItem13=/Game/Player/BP_Player
-MRUItem14=/Game/NPCs/Dialogue_Specific/DT_Dialogue
-MRUItem15=/Game/Shared_Game_Mechanics/BPC_CurrentHand
-MRUItem16=/Game/Maps/Main_Level/Main_Level
-MRUItem17=/Game/Mini_Games/Darts/BP_Dart_Game_Manager
-MRUItem18=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem19=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
-MRUItem20=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
-MRUItem21=/Game/UI/Diegetic/Misc/Drink_Menu/WBP_Drink_Names
-MRUItem22=/Game/Misc_Mechanics/Drink_Board/BP_Drink_Board
-MRUItem23=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat
-MRUItem24=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/rag
-MRUItem25=/Game/UI/Diegetic/NPCs/WBP_NPC_Game_Availability_Indicator
-MRUItem26=/Game/UI/Diegetic/Misc/WBP_Jukebox_Track_Title
-MRUItem27=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat_Trigger_Start
-MRUItem28=/Game/NPCs/Animations/BP_Dialogue_Link
-MRUItem29=/Game/UI/Diegetic/WBP_Game_Win_Loss
->>>>>>> Stashed changes
+MRUItem0=/Game/UI/Non_Diegetic/Pause/WBP_Options_Pause_Menu
+MRUItem1=/Game/Shared_Game_Mechanics/Cards/BP_Card
+MRUItem2=/Game/NPCs/Models/Dante_V3/Materials/MM_Dante_Clothes
+MRUItem3=/Game/NPCs/Models/Dante_V3/Materials/MI_Dante_Skin
+MRUItem4=/Game/NPCs/Models/Dante_V3/Dante_V3
+MRUItem5=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_60_to_Zilia
+MRUItem6=/Game/Environment/Custom_Props/Textures/T_Prop_01_A2
+MRUItem7=/Game/Environment/Custom_Props/Materials/Plants
+MRUItem8=/Game/Environment/Custom_Props/Textures/T_Prop_01_A
+MRUItem9=/Game/Modes_Instances/Modes/GM_Bar
+MRUItem10=/Game/UI/Non_Diegetic/Pause/WBP_Pause_Menu1
+MRUItem11=/Game/Misc_Mechanics/Jukebox/BP_Jukebox
+MRUItem12=/Game/UI/Diegetic/Main_Games/IDI_Specific/WBP_Player_Cards_Round_IDI
+MRUItem13=/Game/UI/Diegetic/Main_Games/IDI_Specific/WBP_Unique_Card_Action
+MRUItem14=/Game/Player/BP_Player
+MRUItem15=/Game/NPCs/Dialogue_Specific/DT_Dialogue
+MRUItem16=/Game/Shared_Game_Mechanics/BPC_CurrentHand
+MRUItem17=/Game/Maps/Main_Level/Main_Level
+MRUItem18=/Game/Mini_Games/Darts/BP_Dart_Game_Manager
+MRUItem19=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
+MRUItem20=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
+MRUItem21=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem22=/Game/UI/Diegetic/Misc/Drink_Menu/WBP_Drink_Names
+MRUItem23=/Game/Misc_Mechanics/Drink_Board/BP_Drink_Board
+MRUItem24=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat
+MRUItem25=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/rag
+MRUItem26=/Game/UI/Diegetic/NPCs/WBP_NPC_Game_Availability_Indicator
+MRUItem27=/Game/UI/Diegetic/Misc/WBP_Jukebox_Track_Title
+MRUItem28=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat_Trigger_Start
+MRUItem29=/Game/NPCs/Animations/BP_Dialogue_Link
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
