--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -769,7 +769,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/NPCs/Models/Dante_V3/Materials
+ContentBrowserDrawer.SelectedPaths=/Game/UI/Fonts
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -1926,7 +1926,7 @@ ClothingSystemEditorInterface.LastCompileMethod=Unknown
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
-Object="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object\" \"Object.Render Transform.RenderTransform\" "
 None=======
 None=======
 None=======
@@ -2198,8 +2198,8 @@ BP_Rat_Screw_Game_Manager_C="\"Object\" "
 MegascansMaterialParentSettings="\"Object\" "
 W_Winner_C="\"Object\" "
 UserWidget="\"Object\" "
-Widget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object\" \"Object.Render Transform.RenderTransform\" "
 StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" "
 StreamableRenderAsset="\"Object\" "
 AssetViewerSettings="\"Object\" "
@@ -2222,8 +2222,8 @@ IDI Decide_3="\"Struct\" "
 WidgetComponent="\"Object\" "
 WidgetComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 SizeBox="\"Object\" \"Object.Render Transform.RenderTransform\" "
-ContentWidget="\"Object\" \"Object.Appearance.Background\" \"Object.Appearance.Background.ImageSize\" \"Object.Appearance.Background.Margin\" \"Object.Appearance.Background.OutlineSettings\" \"Object.Appearance.Background.OutlineSettings.Color\" \"Object.Appearance.BrushColor\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object\" \"Object.Appearance.Background\" \"Object.Appearance.Background.ImageSize\" \"Object.Appearance.Background.Margin\" \"Object.Appearance.Background.OutlineSettings\" \"Object.Appearance.Background.OutlineSettings.Color\" \"Object.Appearance.BrushColor\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.ImageSize\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Render Transform.RenderTransform\" "
 WBP_FaceCardPlayed_C="\"Object\" "
@@ -2508,6 +2508,7 @@ None=======
 None=======
 None=======
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -2536,39 +2537,38 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
-RecentAssetEditors=
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UI/Non_Diegetic/Pause/WBP_Options_Pause_Menu
-MRUItem1=/Game/Shared_Game_Mechanics/Cards/BP_Card
-MRUItem2=/Game/NPCs/Models/Dante_V3/Materials/MM_Dante_Clothes
-MRUItem3=/Game/NPCs/Models/Dante_V3/Materials/MI_Dante_Skin
-MRUItem4=/Game/NPCs/Models/Dante_V3/Dante_V3
-MRUItem5=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_60_to_Zilia
-MRUItem6=/Game/Environment/Custom_Props/Textures/T_Prop_01_A2
-MRUItem7=/Game/Environment/Custom_Props/Materials/Plants
-MRUItem8=/Game/Environment/Custom_Props/Textures/T_Prop_01_A
-MRUItem9=/Game/Modes_Instances/Modes/GM_Bar
-MRUItem10=/Game/UI/Non_Diegetic/Pause/WBP_Pause_Menu1
-MRUItem11=/Game/Misc_Mechanics/Jukebox/BP_Jukebox
-MRUItem12=/Game/UI/Diegetic/Main_Games/IDI_Specific/WBP_Player_Cards_Round_IDI
-MRUItem13=/Game/UI/Diegetic/Main_Games/IDI_Specific/WBP_Unique_Card_Action
-MRUItem14=/Game/Player/BP_Player
-MRUItem15=/Game/NPCs/Dialogue_Specific/DT_Dialogue
-MRUItem16=/Game/Shared_Game_Mechanics/BPC_CurrentHand
-MRUItem17=/Game/Maps/Main_Level/Main_Level
-MRUItem18=/Game/Mini_Games/Darts/BP_Dart_Game_Manager
-MRUItem19=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem20=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
-MRUItem21=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
-MRUItem22=/Game/UI/Diegetic/Misc/Drink_Menu/WBP_Drink_Names
-MRUItem23=/Game/Misc_Mechanics/Drink_Board/BP_Drink_Board
-MRUItem24=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat
-MRUItem25=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/rag
-MRUItem26=/Game/UI/Diegetic/NPCs/WBP_NPC_Game_Availability_Indicator
-MRUItem27=/Game/UI/Diegetic/Misc/WBP_Jukebox_Track_Title
-MRUItem28=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat_Trigger_Start
-MRUItem29=/Game/NPCs/Animations/BP_Dialogue_Link
+MRUItem0=/Game/UI/Non_Diegetic/WBP_Game_Completed
+MRUItem1=/Game/UI/Non_Diegetic/Pause/WBP_Options_Pause_Menu
+MRUItem2=/Game/Shared_Game_Mechanics/Cards/BP_Card
+MRUItem3=/Game/NPCs/Models/Dante_V3/Materials/MM_Dante_Clothes
+MRUItem4=/Game/NPCs/Models/Dante_V3/Materials/MI_Dante_Skin
+MRUItem5=/Game/NPCs/Models/Dante_V3/Dante_V3
+MRUItem6=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_60_to_Zilia
+MRUItem7=/Game/Environment/Custom_Props/Textures/T_Prop_01_A2
+MRUItem8=/Game/Environment/Custom_Props/Materials/Plants
+MRUItem9=/Game/Environment/Custom_Props/Textures/T_Prop_01_A
+MRUItem10=/Game/Modes_Instances/Modes/GM_Bar
+MRUItem11=/Game/UI/Non_Diegetic/Pause/WBP_Pause_Menu1
+MRUItem12=/Game/Misc_Mechanics/Jukebox/BP_Jukebox
+MRUItem13=/Game/UI/Diegetic/Main_Games/IDI_Specific/WBP_Player_Cards_Round_IDI
+MRUItem14=/Game/UI/Diegetic/Main_Games/IDI_Specific/WBP_Unique_Card_Action
+MRUItem15=/Game/Player/BP_Player
+MRUItem16=/Game/NPCs/Dialogue_Specific/DT_Dialogue
+MRUItem17=/Game/Shared_Game_Mechanics/BPC_CurrentHand
+MRUItem18=/Game/Maps/Main_Level/Main_Level
+MRUItem19=/Game/Mini_Games/Darts/BP_Dart_Game_Manager
+MRUItem20=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
+MRUItem21=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
+MRUItem22=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem23=/Game/UI/Diegetic/Misc/Drink_Menu/WBP_Drink_Names
+MRUItem24=/Game/Misc_Mechanics/Drink_Board/BP_Drink_Board
+MRUItem25=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat
+MRUItem26=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/rag
+MRUItem27=/Game/UI/Diegetic/NPCs/WBP_NPC_Game_Availability_Indicator
+MRUItem28=/Game/UI/Diegetic/Misc/WBP_Jukebox_Track_Title
+MRUItem29=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat_Trigger_Start
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -6916,6 +6916,7 @@ WidgetInteractionComponent.ComponentTick=False
 Texture2D.LevelOfDetail=True
 EditorNotifyObject.AnimNotify=False
 StaticMeshComponent.Lighting=True
+CanvasPanel.Accessibility=False
 
 [/Script/UnrealEd.EditorExperimentalSettings]
 bEnableAsyncTextureCompilation=False
